# Steam-Log-Collector

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: CODEOWNERS
include/: app_state.hpp  colors.hpp  file_preview.hpp  fonts.hpp  game_selection_screen.hpp  log_files_screen.hpp  logger.hpp  resource_path.hpp  steam-utils.hpp  theme.hpp  toast.hpp  ui_widgets.hpp  welcome_screen.hpp
resources/: icon.rc
src/: file_preview.cpp  fonts.cpp  game_selection_screen.cpp  log_files_screen.cpp  logger.cpp  main.cpp  main_gui.cpp  steam-utils.cpp  toast.cpp  welcome_screen.cpp
src/cli/: main.cpp
src/core/: steam-core.cpp  steam-core.hpp  steam-utils.cpp  steam-utils.hpp
src/gui/: gamelistview.cpp  gamelistview.hpp  logfileview.cpp  logfileview.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
